Revert to d8c965a0ec8ed58655e7b2671baf1fc127f31f53

--- a/Demo/NUIDemo/NUIDemo-Info.plist
+++ b/Demo/NUIDemo/NUIDemo-Info.plist
@@ -25,9 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>iPhone Storyboard</string>
-	<key>UIMainStoryboardFile~ipad</key>
-	<string>iPad Storyboard</string>
+	<string>MainStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
